--- a/static/src/templates/bikes/show.html
+++ b/static/src/templates/bikes/show.html
@@ -8,7 +8,7 @@
             </div>
             <div class="panel-body">
                 <ol>
-                    <li ng-repeat="part in bike._parts">
+                    <li class="form-group" ng-repeat="part in bike._parts">
                         {{part.name}} <a class="btn btn-info btn-sm" ng-href="#/parts/edit/{{part.ID}}">Edytuj</a>
                         <a class="btn btn-danger btn-sm" ng-click="deletePart(bike.ID, part.ID)">Usuń</a>
                     </li>
