--- a/static/src/templates/routes/show.html
+++ b/static/src/templates/routes/show.html
@@ -32,7 +32,7 @@
                                         {{ comment._first_name }} {{ comment._last_name }}
                                     </div>
                                     <div class="col-md-6 text-right">
-                                        {{ comment.date_create | date : 'yyyy-MM-d H:m' }}
+                                        {{ comment.date_create | date : 'yyyy-MM-d H:mm' }}
                                     </div>
                                 </div>
                             </div>
